--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,10 @@ anyhow = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio-native-tls = "0.3"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "signal"] }
 tokio-util = "0.7"
 reqwest = { version = "0.11", features = ["native-tls"] }
 futures = "0.3"
-log = "0.4"
-pretty_env_logger = "0.4"
 bytes = "1"
 hex = "0.4"
 tun = { version = "0.5", features = ["async"] }
@@ -23,3 +21,5 @@ ipnet = "2"
 clap = { version = "4", features = ["derive"] }
 libc = "0.2"
 base64 = "0.21"
+tracing = "0.1"
+tracing-subscriber = "0.3"
