--- a/assets/snx-rs.service
+++ b/assets/snx-rs.service
@@ -5,7 +5,7 @@ Wants = network-online.target
 
 [Service]
 Type=simple
-ExecStart=/opt/snx-rs/snx-rs -c /etc/snx-rs.conf
+ExecStart=/opt/snx-rs/snx-rs -c /etc/snx-rs/snx-rs.conf
 
 [Install]
 WantedBy=multi-user.target
