Added send timeout and systemd restart option

--- a/assets/snx-rs.service
+++ b/assets/snx-rs.service
@@ -6,6 +6,7 @@ Wants = network-online.target
 [Service]
 Type=simple
 ExecStart=/opt/snx-rs/snx-rs -c /etc/snx-rs/snx-rs.conf
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
