--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ anyhow = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio-native-tls = "0.3"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "signal"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "process", "signal"] }
 tokio-util = "0.7"
 reqwest = { version = "0.11", features = ["native-tls"] }
 futures = "0.3"
@@ -27,7 +27,7 @@ ipnet = "2"
 clap = { version = "4", features = ["derive"] }
 libc = "0.2"
 base64 = "0.21"
-tracing = "0.1"
+tracing = { version = "0.1", features = [] }
 tracing-subscriber = "0.3"
 async-trait = "0.1"
 rand = "0.8"
