--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snx-rs"
-version = "0.3.3"
+version = "0.4.0"
 
 edition = "2021"
 
@@ -31,6 +31,7 @@ tracing = { version = "0.1", features = [] }
 tracing-subscriber = "0.3"
 async-trait = "0.1"
 rand = "0.8"
+directories-next = "2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 zbus = "3"
