--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tracing-subscriber = "0.3"
 async-trait = "0.1"
 rand = "0.8"
 directories-next = "2"
+chrono = { version = "0.4", features = ["serde"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 zbus = "3"
