--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "snx-rs"
 version = "0.4.0"
-
+license = "AGPL-3.0"
+license-file = "COPYING"
 edition = "2021"
+authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
+description = "Rust client for Checkpoint VPN tunnels"
+readme = "README.md"
+repository = "https://github.com/ancwrd1/snx-rs"
+keywords = ["snx", "vpn", "ipsec"]
+publish = false
 
 [profile.release]
 lto = true
