--- a/assets/snx-rs.conf
+++ b/assets/snx-rs.conf
@@ -1,7 +1,7 @@
 server-name=SERVER_NAME
 user-name=USER_NAME
 password=PWD_AS_BASE64
-reauth=false
+reauthenticate=false
 log-level=error
-tunnel-type=ssl
+tunnel-type=ipsec
 login-type=vpn_Microsoft_Authenticator
