Fixed centos compilation

--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,3 @@
 [target.x86_64-unknown-linux-gnu]
+pre-build = ["yum install -y perl-IPC-Cmd"]
 image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
