--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ async-recursion = "1"
 rand = "0.8"
 directories-next = "2"
 chrono = { version = "0.4", features = ["serde"] }
+passterm = "2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 zbus = "3"
+secret-service = {  version = "3", features = ["rt-tokio-crypto-rust"] }
