--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ panic = "abort"
 
 [features]
 default = []
-tray-icon = ["dep:ksni"]
+tray-icon = ["dep:ksni", "dep:which"]
 
 [dependencies]
 pest = "2"
@@ -46,7 +46,8 @@ rand = "0.8"
 directories-next = "2"
 chrono = { version = "0.4", features = ["serde"] }
 passterm = "2"
-ksni = { version = "0.2", optional = true}
+ksni = { version = "0.2", optional = true }
+which = { version = "5", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 zbus = "3"
