--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ panic = "abort"
 
 [features]
 default = []
-tray-icon = ["dep:ksni", "dep:which"]
+tray-icon = ["ksni", "which", "opener"]
 
 [dependencies]
 pest = "2"
@@ -48,6 +48,7 @@ chrono = { version = "0.4", features = ["serde"] }
 passterm = "2"
 ksni = { version = "0.2", optional = true }
 which = { version = "5", optional = true }
+opener = { version = "0.6", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 zbus = "3"
