--- a/Cross.toml
+++ b/Cross.toml
@@ -1,3 +1,3 @@
 [target.x86_64-unknown-linux-gnu]
-pre-build = ["yum install -y perl-IPC-Cmd"]
+pre-build = ["yum install -y perl-IPC-Cmd dbus-devel"]
 image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
