Initial support for IKE-based IPSec tunnel

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ default = []
 tray-icon = ["ksni", "which", "opener"]
 
 [dependencies]
+isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
 pest = "2"
 pest_derive = "2"
 anyhow = "1"
@@ -37,7 +38,7 @@ tun = { version = "0.6", features = ["async"] }
 ipnet = {  version = "2", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
 libc = "0.2"
-base64 = "0.21"
+base64 = "0.22"
 tracing = { version = "0.1", features = [] }
 tracing-subscriber = "0.3"
 async-trait = "0.1"
@@ -51,6 +52,8 @@ opener = { version = "0.6", optional = true }
 enum-as-inner = "0.6"
 num-traits = "0.2"
 parse_int = "0.6"
+parking_lot = "0.12"
+byteorder = "1"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ksni = { version = "0.2", optional = true }
