--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ panic = "abort"
 
 [features]
 default = []
-tray-icon = ["ksni", "which"]
+tray-icon = ["dep:ksni", "dep:which"]
+webkit2gtk = ["dep:webkit2gtk", "dep:gtk"]
 
 [dependencies]
 isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
@@ -56,6 +57,8 @@ parking_lot = "0.12"
 byteorder = "1"
 regex = "1"
 once_cell = "1"
+webkit2gtk = { version = "2", optional = true, features = ["v2_6", "v2_16", "v2_30"] }
+gtk = { version = "0.18", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ksni = { version = "0.2", optional = true }
