--- a/Cross.toml
+++ b/Cross.toml
@@ -1,3 +1,3 @@
 [target.x86_64-unknown-linux-gnu]
-pre-build = ["yum install -y perl-IPC-Cmd dbus-devel"]
-image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
+pre-build = ["apt-get update && apt-get install -y libdbus-1-dev libwebkit2gtk-4.0-dev libgtk2.0-dev libglib2.0-dev"]
+image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main"
