--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,10 +57,11 @@ parking_lot = "0.12"
 byteorder = "1"
 regex = "1"
 once_cell = "1"
-webkit2gtk = { version = "2", optional = true, features = ["v2_6", "v2_16", "v2_30"] }
-gtk = { version = "0.18", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ksni = { version = "0.2", optional = true }
 zbus = { version = "3", default-features = false, features = ["tokio"] }
 secret-service = {  version = "3", features = ["rt-tokio-crypto-rust"] }
+nix = { version = "0.28", features = ["fs", "user"] }
+webkit2gtk = { version = "2", optional = true, features = ["v2_6", "v2_16", "v2_30"] }
+gtk = { version = "0.18", optional = true }
