--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snx-rs"
-version = "1.0.2"
+version = "1.1.0"
 license = "AGPL-3.0"
 edition = "2021"
 authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
@@ -10,6 +10,11 @@ repository = "https://github.com/ancwrd1/snx-rs"
 keywords = ["snx", "vpn", "ipsec"]
 publish = false
 
+[[bin]]
+name = "snx-rs-gui"
+path = "src/bin/snx-rs-gui.rs"
+required-features = ["gui"]
+
 [profile.release]
 lto = true
 codegen-units = 1
@@ -17,9 +22,8 @@ strip = true
 panic = "abort"
 
 [features]
-default = []
-tray-icon = ["dep:ksni", "dep:which", "dep:png"]
-webkit2gtk = ["dep:webkit2gtk", "dep:gtk"]
+default = ["gui"]
+gui =["dep:ksni", "dep:which", "dep:png", "dep:webkit2gtk", "dep:gtk", "dep:async-channel"]
 
 [dependencies]
 isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
@@ -48,7 +52,6 @@ rand = "0.8"
 directories-next = "2"
 chrono = { version = "0.4", features = ["serde"] }
 passterm = "2"
-which = { version = "6", optional = true }
 opener = { version = "0.7"}
 enum-as-inner = "0.6"
 num-traits = "0.2"
@@ -58,7 +61,8 @@ byteorder = "1"
 regex = "1"
 once_cell = "1"
 
-[target.'cfg(target_os = "linux")'.dependencies]
+# optional dependencies
+which = { version = "6", optional = true }
 ksni = { version = "0.2", optional = true }
 zbus = { version = "3", default-features = false, features = ["tokio"] }
 secret-service = {  version = "3", features = ["rt-tokio-crypto-rust"] }
@@ -66,3 +70,4 @@ nix = { version = "0.28", features = ["fs", "user"] }
 webkit2gtk = { version = "2", optional = true, features = ["v2_6", "v2_16", "v2_30"] }
 gtk = { version = "0.18", optional = true }
 png = { version = "0.17", optional = true }
+async-channel = {  version = "2.2.0", optional = true }
