--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
-[package]
-name = "snx-rs"
+[workspace]
+members = [ "snxcore", "snxctl", "snx-rs", "snx-rs-gui" ]
+resolver = "2"
+
+[workspace.package]
 version = "1.1.0"
 license = "AGPL-3.0"
 edition = "2021"
@@ -10,64 +13,8 @@ repository = "https://github.com/ancwrd1/snx-rs"
 keywords = ["snx", "vpn", "ipsec"]
 publish = false
 
-[[bin]]
-name = "snx-rs-gui"
-path = "src/bin/snx-rs-gui.rs"
-required-features = ["gui"]
-
 [profile.release]
 lto = true
 codegen-units = 1
 strip = true
 panic = "abort"
-
-[features]
-default = ["gui"]
-gui =["dep:ksni", "dep:which", "dep:png", "dep:webkit2gtk", "dep:gtk", "dep:async-channel"]
-
-[dependencies]
-isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
-pest = "2"
-pest_derive = "2"
-anyhow = "1"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tokio-native-tls = "0.3"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "process", "signal"] }
-tokio-util = "0.7"
-reqwest = { version = "0.12", features = ["native-tls"] }
-futures = "0.3"
-bytes = "1"
-hex = "0.4"
-tun = { version = "0.6", features = ["async"] }
-ipnet = {  version = "2", features = ["serde"] }
-clap = { version = "4", features = ["derive"] }
-libc = "0.2"
-base64 = "0.22"
-tracing = { version = "0.1", features = [] }
-tracing-subscriber = "0.3"
-async-trait = "0.1"
-async-recursion = "1"
-rand = "0.8"
-directories-next = "2"
-chrono = { version = "0.4", features = ["serde"] }
-passterm = "2"
-opener = { version = "0.7"}
-enum-as-inner = "0.6"
-num-traits = "0.2"
-parse_int = "0.6"
-parking_lot = "0.12"
-byteorder = "1"
-regex = "1"
-once_cell = "1"
-
-# optional dependencies
-which = { version = "6", optional = true }
-ksni = { version = "0.2", optional = true }
-zbus = { version = "3", default-features = false, features = ["tokio"] }
-secret-service = {  version = "3", features = ["rt-tokio-crypto-rust"] }
-nix = { version = "0.28", features = ["fs", "user"] }
-webkit2gtk = { version = "2", optional = true, features = ["v2_6", "v2_16", "v2_30"] }
-gtk = { version = "0.18", optional = true }
-png = { version = "0.17", optional = true }
-async-channel = {  version = "2.2.0", optional = true }
