--- a/snx-rs-gui/Cargo.toml
+++ b/snx-rs-gui/Cargo.toml
@@ -23,3 +23,4 @@ anyhow = "1"
 once_cell = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
 ipnet = {  version = "2", features = ["serde"] }
+clap = { version = "4", features = ["derive"] }
