--- a/snx-rs-gui/Cargo.toml
+++ b/snx-rs-gui/Cargo.toml
@@ -12,7 +12,7 @@ publish.workspace = true
 
 [dependencies]
 snxcore = { path = "../snxcore" }
-ksni = "0.2"
+tray-icon = "0.13"
 webkit2gtk = { version = "2", features = ["v2_32"] }
 gtk = "0.18"
 png = "0.17"
