--- a/snxcore/Cargo.toml
+++ b/snxcore/Cargo.toml
@@ -11,7 +11,7 @@ keywords.workspace = true
 publish.workspace = true
 
 [dependencies]
-isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
+isakmp = { git = "https://github.com/ancwrd1/isakmp.git", branch = "pkcs11" }
 pest = "2"
 pest_derive = "2"
 anyhow = "1"
