--- a/snxcore/Cargo.toml
+++ b/snxcore/Cargo.toml
@@ -45,3 +45,4 @@ once_cell = "1"
 nix = { version = "0.29", features = ["fs", "user"] }
 zbus = { version = "4.2", default-features = false, features = ["tokio"] }
 secret-service = {  version = "3", features = ["rt-tokio-crypto-rust"] }
+uuid = { version = "1", features = ["v4", "v5"] }
