Made WebKit integration optional for SAML authentication

--- a/snxcore/Cargo.toml
+++ b/snxcore/Cargo.toml
@@ -46,3 +46,4 @@ nix = { version = "0.29", features = ["fs", "user"] }
 zbus = { version = "4.2", default-features = false, features = ["tokio"] }
 secret-service = {  version = "4", features = ["rt-tokio-crypto-rust"] }
 uuid = { version = "1", features = ["v4", "v5"] }
+opener = { version = "0.7"}
