--- a/snx-rs-gui/Cargo.toml
+++ b/snx-rs-gui/Cargo.toml
@@ -12,8 +12,8 @@ publish.workspace = true
 
 [dependencies]
 snxcore = { path = "../snxcore" }
-tray-icon = { version = "0.14", default-features = false }
-webkit2gtk = { version = "2", features = ["v2_32"] }
+tray-icon = { version = "0.15", default-features = false }
+webkit2gtk = { version = "2", features = ["v2_32"], optional = true }
 gtk = "0.18"
 png = "0.17"
 async-channel = "2"
@@ -27,3 +27,6 @@ clap = { version = "4", features = ["derive"] }
 hex = "0.4"
 zbus = { version = "4.2", default-features = false, features = ["tokio"] }
 futures = "0.3"
+
+[features]
+webkit2gtk = ["dep:webkit2gtk"]
