--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
       - run: git submodule update --init
       - run: sudo apt-get update && sudo apt-get install -yqq build-essential pkg-config libssl-dev libgtk-3-dev
       - run: ci/set_rust_version.bash ${{ matrix.channel }} ${{ matrix.target }}
