--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ keywords = ["snx", "vpn", "ipsec"]
 publish = false
 
 [profile.release]
-lto = true
-codegen-units = 1
 strip = true
 panic = "abort"
+
+[profile.lto]
+inherits = "release"
+lto = true
+codegen-units = 1
