--- a/snx-rs/Cargo.toml
+++ b/snx-rs/Cargo.toml
@@ -20,3 +20,4 @@ libc = "0.2"
 tracing-subscriber = "0.3"
 clap = { version = "4.5.4", features = ["derive"] }
 ipnet = {  version = "2", features = ["serde"] }
+openssl = "0.10"
