--- a/snx-rs/Cargo.toml
+++ b/snx-rs/Cargo.toml
@@ -21,3 +21,6 @@ tracing-subscriber = "0.3"
 clap = { version = "4.5.4", features = ["derive"] }
 ipnet = {  version = "2", features = ["serde"] }
 openssl = "0.10"
+
+[features]
+vendored-openssl = ["openssl/vendored"]
