Moved openssl to snxcore

--- a/snxcore/Cargo.toml
+++ b/snxcore/Cargo.toml
@@ -47,7 +47,12 @@ secret-service = {  version = "4", features = ["rt-tokio-crypto-rust"] }
 uuid = { version = "1", features = ["v4", "v5"] }
 opener = { version = "0.7"}
 cached = {  version = "0.54",  features = ["async"] }
+openssl-sys = "0.9"
+openssl = "0.10"
 
 [dev-dependencies]
 tempfile = "3"
+
+[features]
+vendored-openssl = ["openssl/vendored"]
 
