--- a/snxcore/Cargo.toml
+++ b/snxcore/Cargo.toml
@@ -20,7 +20,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio-native-tls = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "process", "signal", "macros"] }
-tokio-util = "0.7"
+tokio-util = { version = "0.7", features = ["net"] }
 reqwest = { version = "0.12", features = ["native-tls"] }
 futures = "0.3"
 bytes = "1"
