Add uid to snx-rs-gui lock file name. Fixes #83

--- a/snx-rs-gui/Cargo.toml
+++ b/snx-rs-gui/Cargo.toml
@@ -26,3 +26,4 @@ clap = { version = "4", features = ["derive"] }
 hex = "0.4"
 zbus = { version = "5", default-features = false, features = ["tokio"] }
 futures = "0.3"
+libc = "0.2"
