--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           persist-credentials: false
       - run: git submodule update --init
-      - run: sudo apt-get update && sudo apt-get install -yqq build-essential pkg-config libssl-dev libgtk-4-dev
+      - run: sudo apt-get update && sudo apt-get install -yqq build-essential pkg-config libssl-dev libgtk-3-dev libgtk-4-dev
       - run: ci/set_rust_version.bash ${{ matrix.channel }} ${{ matrix.target }}
       - run: ci/clippy.bash cargo ${{ matrix.target }}
       - run: ci/test.bash cargo ${{ matrix.target }}
