--- a/snxctl/Cargo.toml
+++ b/snxctl/Cargo.toml
@@ -17,3 +17,4 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 clap = { version = "4", features = ["derive"] }
+futures = "0.3"
