--- a/snx-rs-gui/Cargo.toml
+++ b/snx-rs-gui/Cargo.toml
@@ -19,6 +19,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 anyhow = "1"
 once_cell = "1"
+tokio-util = { version = "0.7", features = ["codec"] }
 tokio = { version = "1", features = ["rt-multi-thread"] }
 ipnet = {  version = "2", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
@@ -27,3 +28,5 @@ zbus = { version = "5", default-features = false, features = ["tokio"] }
 futures = "0.3"
 libc = "0.2"
 async-trait = "0.1"
+interprocess = { version = "2", features = ["tokio"] }
+bytes = "1"
