--- a/snx-rs-gui/Cargo.toml
+++ b/snx-rs-gui/Cargo.toml
@@ -18,7 +18,7 @@ png = "0.17"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 anyhow = "1"
-once_cell = "1"
+once_cell = "1.8"
 tokio-util = { version = "0.7", features = ["codec"] }
 tokio = { version = "1", features = ["rt-multi-thread"] }
 ipnet = {  version = "2", features = ["serde"] }
@@ -30,3 +30,9 @@ libc = "0.2"
 async-trait = "0.1"
 interprocess = { version = "2", features = ["tokio"] }
 bytes = "1"
+i18n-embed = { version = "0.15", features = [
+    "fluent-system",
+    "desktop-requester",
+] }
+i18n-embed-fl = "0.9"
+rust-embed = { version = "8", features = ["debug-embed"] }
