--- a/snxctl/Cargo.toml
+++ b/snxctl/Cargo.toml
@@ -12,6 +12,7 @@ publish.workspace = true
 
 [dependencies]
 snxcore = { path = "../snxcore" }
+i18n = { path = "../i18n" }
 anyhow = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
