Translated .desktop file

--- a/assets/snx-rs-gui.desktop
+++ b/assets/snx-rs-gui.desktop
@@ -1,35 +1,195 @@
 [Desktop Entry]
 Name=SNX-RS VPN client
+Name[cs_CZ]=Klient SNX-RS VPN
+Name[da_DK]=SNX-RS VPN-klient
+Name[de_DE]=SNX-RS VPN-Client
+Name[en_US]=SNX-RS VPN client
+Name[es_ES]=Cliente VPN SNX-RS
+Name[fi_FI]=SNX-RS VPN-asiakas
+Name[fr_FR]=Client VPN SNX-RS
+Name[it_IT]=Client VPN SNX-RS
+Name[nl_NL]=SNX-RS VPN-client
+Name[no_NO]=SNX-RS VPN-klient
+Name[pl_PL]=Klient VPN SNX-RS
+Name[pt_BR]=Cliente VPN SNX-RS
+Name[pt_PT]=Cliente VPN SNX-RS
+Name[ru_RU]=Клиент VPN SNX-RS
+Name[sk_SK]=Klient SNX-RS VPN
+Name[sv_SE]=SNX-RS VPN-klient
 GenericName=Check Point VPN client
+GenericName[cs_CZ]=Klient VPN Check Point
+GenericName[da_DK]=Check Point VPN-klient
+GenericName[de_DE]=Check Point VPN-Client
+GenericName[en_US]=Check Point VPN client
+GenericName[es_ES]=Cliente VPN Check Point
+GenericName[fi_FI]=Check Point VPN-asiakas
+GenericName[fr_FR]=Client VPN Check Point
+GenericName[it_IT]=Client VPN Check Point
+GenericName[nl_NL]=Check Point VPN-client
+GenericName[no_NO]=Check Point VPN-klient
+GenericName[pl_PL]=Klient VPN Check Point
+GenericName[pt_BR]=Cliente VPN Check Point
+GenericName[pt_PT]=Cliente VPN Check Point
+GenericName[ru_RU]=Клиент VPN Check Point
+GenericName[sk_SK]=Klient VPN Check Point
+GenericName[sv_SE]=Check Point VPN-klient
 Comment=Check Point VPN client
+Comment[cs_CZ]=Klient VPN Check Point
+Comment[da_DK]=Check Point VPN-klient
+Comment[de_DE]=Check Point VPN-Client
+Comment[en_US]=Check Point VPN client
+Comment[es_ES]=Cliente VPN Check Point
+Comment[fi_FI]=Check Point VPN-asiakas
+Comment[fr_FR]=Client VPN Check Point
+Comment[it_IT]=Client VPN Check Point
+Comment[nl_NL]=Check Point VPN-client
+Comment[no_NO]=Check Point VPN-klient
+Comment[pl_PL]=Klient VPN Check Point
+Comment[pt_BR]=Cliente VPN Check Point
+Comment[pt_PT]=Cliente VPN Check Point
+Comment[ru_RU]=Клиент VPN Check Point
+Comment[sk_SK]=Klient VPN Check Point
+Comment[sv_SE]=Check Point VPN-klient
 Categories=Network;
 Exec=/opt/snx-rs/snx-rs-gui
 Icon=network-vpn
 Keywords=network;vpn;
+Keywords[cs_CZ]=síť;vpn;
+Keywords[da_DK]=netværk;vpn;
+Keywords[de_DE]=Netzwerk;VPN;
+Keywords[en_US]=network;vpn;
+Keywords[es_ES]=red;vpn;
+Keywords[fi_FI]=verkko;vpn;
+Keywords[fr_FR]=réseau;vpn;
+Keywords[it_IT]=rete;vpn;
+Keywords[nl_NL]=netwerk;vpn;
+Keywords[no_NO]=nettverk;vpn;
+Keywords[pl_PL]=sieć;vpn;
+Keywords[pt_BR]=rede;vpn;
+Keywords[pt_PT]=rede;vpn;
+Keywords[ru_RU]=сеть;vpn;
+Keywords[sk_SK]=sieť;vpn;
+Keywords[sv_SE]=nätverk;vpn;
 TryExec=/opt/snx-rs/snx-rs-gui
 Type=Application
 Actions=connect;disconnect;settings;status;exit;about
 
 [Desktop Action connect]
 Name=Connect
+Name[cs_CZ]=Připojit
+Name[da_DK]=Opret forbindelse
+Name[de_DE]=Verbinden
+Name[en_US]=Connect
+Name[es_ES]=Conectar
+Name[fi_FI]=Yhdistä
+Name[fr_FR]=Connecter
+Name[it_IT]=Connetti
+Name[nl_NL]=Verbinden
+Name[no_NO]=Koble til
+Name[pl_PL]=Połącz
+Name[pt_BR]=Conectar
+Name[pt_PT]=Ligar
+Name[ru_RU]=Подключиться
+Name[sk_SK]=Pripojiť
+Name[sv_SE]=Anslut
 Exec=/opt/snx-rs/snx-rs-gui -m connect
 
 [Desktop Action disconnect]
 Name=Disconnect
+Name[cs_CZ]=Odpojit
+Name[da_DK]=Afbryd forbindelse
+Name[de_DE]=Trennen
+Name[en_US]=Disconnect
+Name[es_ES]=Desconectar
+Name[fi_FI]=Katkaise yhteys
+Name[fr_FR]=Déconnecter
+Name[it_IT]=Disconnetti
+Name[nl_NL]=Verbinding verbreken
+Name[no_NO]=Koble fra
+Name[pl_PL]=Rozłącz
+Name[pt_BR]=Desconectar
+Name[pt_PT]=Desligar
+Name[ru_RU]=Отключиться
+Name[sk_SK]=Odpojiť
+Name[sv_SE]=Koppla från
 Exec=/opt/snx-rs/snx-rs-gui -m disconnect
 
 [Desktop Action settings]
 Name=Settings
+Name[cs_CZ]=Nastavení
+Name[da_DK]=Indstillinger
+Name[de_DE]=Einstellungen
+Name[en_US]=Settings
+Name[es_ES]=Configuración
+Name[fi_FI]=Asetukset
+Name[fr_FR]=Paramètres
+Name[it_IT]=Impostazioni
+Name[nl_NL]=Instellingen
+Name[no_NO]=Innstillinger
+Name[pl_PL]=Ustawienia
+Name[pt_BR]=Configurações
+Name[pt_PT]=Definições
+Name[ru_RU]=Настройки
+Name[sk_SK]=Nastavenia
+Name[sv_SE]=Inställningar
 Exec=/opt/snx-rs/snx-rs-gui -m settings
 
 [Desktop Action status]
 Name=Connection information
+Name[cs_CZ]=Informace o připojení
+Name[da_DK]=Forbindelsesinformation
+Name[de_DE]=Verbindungsinformationen
+Name[en_US]=Connection information
+Name[es_ES]=Información de conexión
+Name[fi_FI]=Yhteystiedot
+Name[fr_FR]=Informations de connexion
+Name[it_IT]=Informazioni sulla connessione
+Name[nl_NL]=Verbindingsinformatie
+Name[no_NO]=Tilkoblingsinformasjon
+Name[pl_PL]=Informacje o połączeniu
+Name[pt_BR]=Informações de conexão
+Name[pt_PT]=Informações de ligação
+Name[ru_RU]=Информация о соединении
+Name[sk_SK]=Informácie o pripojení
+Name[sv_SE]=Anslutningsinformation
 Exec=/opt/snx-rs/snx-rs-gui -m status
 
 [Desktop Action exit]
 Name=Exit
+Name[cs_CZ]=Ukončit
+Name[da_DK]=Afslut
+Name[de_DE]=Beenden
+Name[en_US]=Exit
+Name[es_ES]=Salir
+Name[fi_FI]=Poistu
+Name[fr_FR]=Quitter
+Name[it_IT]=Esci
+Name[nl_NL]=Afsluiten
+Name[no_NO]=Avslutt
+Name[pl_PL]=Wyjdź
+Name[pt_BR]=Sair
+Name[pt_PT]=Sair
+Name[ru_RU]=Выход
+Name[sk_SK]=Ukončiť
+Name[sv_SE]=Avsluta
 Exec=/opt/snx-rs/snx-rs-gui -m exit
 
 [Desktop Action about]
 Name=About
+Name[cs_CZ]=O programu
+Name[da_DK]=Om
+Name[de_DE]=Über
+Name[en_US]=About
+Name[es_ES]=Acerca de
+Name[fi_FI]=Tietoja
+Name[fr_FR]=À propos
+Name[it_IT]=Informazioni
+Name[nl_NL]=Over
+Name[no_NO]=Om
+Name[pl_PL]=O programie
+Name[pt_BR]=Sobre
+Name[pt_PT]=Sobre
+Name[ru_RU]=О программе
+Name[sk_SK]=O programe
+Name[sv_SE]=Om
 Exec=/opt/snx-rs/snx-rs-gui -m about
