Updated github actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    versioning-strategy: lockfile-only
+    rebase-strategy: auto
+    group:
+        name: "all-cargo-dependencies"
+        patterns:
+            - "*"
