--- a/snx-rs-gui/Cargo.toml
+++ b/snx-rs-gui/Cargo.toml
@@ -24,6 +24,7 @@ tokio-util = { version = "0.7", features = ["codec"] }
 tokio = { version = "1", features = ["rt-multi-thread"] }
 ipnet = {  version = "2", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
+clap_complete = { workspace = true }
 hex = "0.4"
 zbus = { version = "5", default-features = false, features = ["tokio"] }
 futures = "0.3"
