--- a/snx-rs/Cargo.toml
+++ b/snx-rs/Cargo.toml
@@ -20,4 +20,5 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 libc = "0.2"
 tracing-subscriber = "0.3"
 clap = { version = "4.5", features = ["derive"] }
+clap_complete = { workspace = true }
 ipnet = {  version = "2", features = ["serde"] }
