--- a/snxctl/Cargo.toml
+++ b/snxctl/Cargo.toml
@@ -18,4 +18,5 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 clap = { version = "4", features = ["derive"] }
+clap_complete = { workspace = true }
 futures = "0.3"
