--- a/assets/snx-rs.service
+++ b/assets/snx-rs.service
@@ -6,6 +6,8 @@ Wants = network-online.target
 [Service]
 Type=simple
 ExecStart=/opt/snx-rs/snx-rs -m command -l info
+Restart=on-failure
+RestartPreventExitStatus=1 2 255
 
 [Install]
 WantedBy=multi-user.target
