--- a/snxcore/Cargo.toml
+++ b/snxcore/Cargo.toml
@@ -41,7 +41,6 @@ enum-as-inner = "0.6"
 num-traits = "0.2"
 parse_int = "0.9"
 byteorder = "1"
-regex = "1"
 once_cell = "1"
 nix = { version = "0.30", features = ["fs", "user"] }
 zbus = { version = "5", default-features = false, features = ["tokio"] }
@@ -53,6 +52,9 @@ openssl-sys = "0.9"
 openssl = "0.10"
 itertools = "0.14"
 interprocess = { version = "2", features = ["tokio"] }
+hyper = { version = "1", default-features = false, features = ["server", "http1"] }
+hyper-util = "0.1"
+http-body-util = "0.1"
 
 [dev-dependencies]
 tempfile = "3"
