--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,45 +3,39 @@ name: Create Release on Tag
 on:
   push:
     tags:
-      - 'v*.*.*'      # Triggers on annotated tags like v1.0.0
-      - 'test-*.*.*'  # Triggers on annotated tags like test-1.0.0
+      - 'v*.*.*'
+      - 'test-*.*.*'
 
 jobs:
   release:
     runs-on: ubuntu-22.04
 
     steps:
-      # Checkout the repository at the tagged commit
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
 
-      # Install dependencies
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y pkg-config libssl-dev libgtk-4-dev
 
-      # Install Rust
       - name: Install Rust
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           source $HOME/.cargo/env
 
-      # Build the project
       - name: Build project
         run: |
           chmod +x scripts/build-lto.sh
           ./scripts/build-lto.sh
 
-      # Package the project
       - name: Package project
         run: |
           chmod +x scripts/package.sh
           ./scripts/package.sh
 
-      # Parse CHANGELOG.md and create release notes
       - name: Extract changelog for tag
         id: changelog
         run: |
@@ -63,7 +57,6 @@ jobs:
           echo "EOF" >> $GITHUB_ENV
           echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
 
-      # Create GitHub Release (skip if tag starts with test-)
       - name: Create Release
         if: ${{ !startsWith(github.ref_name, 'test-') }}
         uses: actions/github-script@v7
@@ -85,7 +78,6 @@ jobs:
               prerelease: false
             });
 
-            // Upload release asset
             const artifact = fs.readFileSync(artifactPath);
             await github.rest.repos.uploadReleaseAsset({
               owner: context.repo.owner,
