--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["snxcore", "snxctl", "snx-rs", "snx-rs-gui", "i18n"]
 resolver = "2"
 
 [workspace.package]
-version = "4.8.0-pre"
+version = "4.8.0"
 license = "AGPL-3.0"
 edition = "2024"
 authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
