--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,10 +40,11 @@ jobs:
         id: changelog
         run: |
           TAG_NAME=$(echo ${{ github.ref_name }})
+          VERSION_NAME=$(echo $TAG_NAME | sed 's/^v//;s/^test-//')
           echo "Extracting changelog for tag: $TAG_NAME"
 
           # Find the changelog section for this tag
-          CHANGELOG=$(awk '/^## '"$TAG_NAME"' /,/^## /{if(/^-/){print}}' CHANGELOG.md | sed 's/^- //')
+          CHANGELOG=$(awk -v tag="## $TAG_NAME " '$0 ~ tag {flag=1; next} /^## / && flag {flag=0} flag && /^-/ {print}' CHANGELOG.md | sed 's/^- //')
 
           if [ -z "$CHANGELOG" ]; then
             echo "No changelog entries found for $TAG_NAME"
@@ -51,11 +52,12 @@ jobs:
           fi
 
           # Format release notes
-          RELEASE_NOTES="## Version $TAG_NAME\n\n$CHANGELOG"
+          RELEASE_NOTES="$CHANGELOG"
           echo "release_notes<<EOF" >> $GITHUB_ENV
           echo "$RELEASE_NOTES" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
           echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
+          echo "version_name=$VERSION_NAME" >> $GITHUB_ENV
 
       - name: Create Release
         if: ${{ !startsWith(github.ref_name, 'test-') }}
@@ -65,6 +67,7 @@ jobs:
           script: |
             const fs = require('fs');
             const tagName = process.env.tag_name;
+            const versionName = process.env.version_name;
             const releaseNotes = process.env.release_notes;
             const artifactPath = `target/snx-rs-${tagName}-linux-x86_64.tar.xz`;
 
@@ -72,7 +75,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: tagName,
-              name: `Version ${tagName}`,
+              name: `Version ${versionName}`,
               body: releaseNotes,
               draft: false,
               prerelease: false
