--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
           echo "Extracting changelog for tag: $TAG_NAME"
 
           # Find the changelog section for this tag
-          CHANGELOG=$(awk -v tag="## $TAG_NAME " '$0 ~ tag {flag=1; next} /^## / && flag {flag=0} flag && /^-/ {print}' CHANGELOG.md | sed 's/^- //')
+          CHANGELOG=$(awk -v tag="## $TAG_NAME " '$0 ~ tag {flag=1; next} /^## / && flag {flag=0} flag && /^-/ {print}' CHANGELOG.md)
 
           if [ -z "$CHANGELOG" ]; then
             echo "No changelog entries found for $TAG_NAME"
