--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,7 @@ jobs:
         if: ${{ !startsWith(github.ref_name, 'test-') }}
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.CI_RELEASE_TOKEN }}
           script: |
             const fs = require('fs');
             const tagName = process.env.tag_name;
