--- a/apps/snx-rs/Cargo.toml
+++ b/apps/snx-rs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "snxctl"
+name = "snx-rs"
 version.workspace = true
 license.workspace = true
 edition.workspace = true
@@ -11,12 +11,14 @@ keywords.workspace = true
 publish.workspace = true
 
 [dependencies]
-snxcore = { path = "../snxcore" }
-i18n = { path = "../i18n" }
+snxcore = { path = "../../crates/snxcore" }
+i18n = { path = "../../crates/i18n" }
 anyhow = "1"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-clap = { version = "4", features = ["derive"] }
-clap_complete = { workspace = true }
 futures = "0.3"
+tracing = "0.1"
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+libc = "0.2"
+tracing-subscriber = "0.3"
+clap = { version = "4.5", features = ["derive"] }
+clap_complete = { workspace = true }
+ipnet = {  version = "2", features = ["serde"] }
