--- a/apps/snxctl/Cargo.toml
+++ b/apps/snxctl/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "snx-rs"
+name = "snxctl"
 version.workspace = true
 license.workspace = true
 edition.workspace = true
@@ -11,14 +11,12 @@ keywords.workspace = true
 publish.workspace = true
 
 [dependencies]
-snxcore = { path = "../snxcore" }
-i18n = { path = "../i18n" }
+snxcore = { path = "../../crates/snxcore" }
+i18n = { path = "../../crates/i18n" }
 anyhow = "1"
-futures = "0.3"
 tracing = "0.1"
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-libc = "0.2"
 tracing-subscriber = "0.3"
-clap = { version = "4.5", features = ["derive"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+clap = { version = "4", features = ["derive"] }
 clap_complete = { workspace = true }
-ipnet = {  version = "2", features = ["serde"] }
+futures = "0.3"
