--- a/crates/snxcore/Cargo.toml
+++ b/crates/snxcore/Cargo.toml
@@ -42,8 +42,6 @@ num-traits = "0.2"
 parse_int = "0.9"
 byteorder = "1"
 nix = { version = "0.30", features = ["fs", "user"] }
-zbus = { version = "5", default-features = false, features = ["tokio"] }
-secret-service = {  version = "5", features = ["rt-tokio-crypto-rust"] }
 uuid = { version = "1", features = ["v4", "v5"] }
 opener = { version = "0.8"}
 cached = {  version = "0.56",  features = ["async"] }
@@ -54,6 +52,10 @@ interprocess = { version = "2", features = ["tokio"] }
 hyper = { version = "1", default-features = false, features = ["server", "http1"] }
 hyper-util = "0.1"
 http-body-util = "0.1"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+zbus = { version = "5", default-features = false, features = ["tokio"] }
+secret-service = {  version = "5", features = ["rt-tokio-crypto-rust"] }
 
 [dev-dependencies]
 tempfile = "3"
