Switched to sqlite database to store saved sessions.

--- a/crates/snxcore/Cargo.toml
+++ b/crates/snxcore/Cargo.toml
@@ -52,6 +52,7 @@ interprocess = { version = "2", features = ["tokio"] }
 hyper = { version = "1", default-features = false, features = ["server", "http1"] }
 hyper-util = "0.1"
 http-body-util = "0.1"
+rusqlite = { version = "0.37" , features = ["uuid"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 zbus = { version = "5", default-features = false, features = ["tokio"] }
