--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev libgtk-4-dev makeself
+          sudo apt-get install -y pkg-config libssl-dev libgtk-4-dev makeself libwebkit2gtk-4.0-dev
 
       - name: Install Rust
         run: |
