--- a/apps/snx-rs-gui/Cargo.toml
+++ b/apps/snx-rs-gui/Cargo.toml
@@ -33,4 +33,7 @@ bytes = "1"
 async-channel = "2"
 itertools = "0.14"
 uuid = { version = "1.18.1", features = ["v4"] }
-webkit6 = "0.5"
+webkit6 = { version = "0.5", optional = true }
+
+[features]
+mobile-access = ["dep:webkit6"]
